# scikit-learn

./: PKG-INFO  README.Debian.armel  README.Debian.armhf  README.Debian.mips64el  README.Debian.ppc64el  README.Debian.s390x  changelog  control  copyright  gbp.conf  github-revision.txt  python-sklearn-doc.links  rules  salsa-ci.yml  setup.cfg  setup.py  watch
cythonized-files/sklearn/: _isotonic.c
cythonized-files3/sklearn/: _isotonic.c
debian/: README.Debian.mipsel  README.source  changelog  control  copyright  python-sklearn-doc.doc-base  python-sklearn-doc.docs  python-sklearn-doc.links  python-sklearn-doc.lintian-overrides  python3-sklearn-lib.install  rules  source.lintian-overrides  watch
debian/patches/: Change-expected-result-type-to-pass-on-32-bit.patch  Disable-BinderHub-links.patch  Fix-for-test_uniform_grid.patch  Increase-tolerance-for-RANSACRegressor-test.patch  NumPy-div-by-zero-check.patch  Skip-failing-non-intel-tests.patch  Skip-k-means-convergence-tests.patch  Skip-two-tests-when-SciPy-1.5.patch  Use-local-MathJax.patch  align-create_memmap_backed_data.patch  changeset_6c99d797d7c71d216503612a242bffb8d006582d.diff  deb_disable_google_anals  deb_git_revision_cmd  deb_no_google_analytics  deb_nopaypal  (+19 more)
doc/: about.rst  conf.py
patches/: 0001-BF-Define-message-since-exception-might-happen-in-in.patch  Disable-BinderHub-links.patch  NumPy-div-by-zero-check.patch  Use-assert_allclose-instead-of-equality-in-FP-comparison.patch  Use-local-MathJax.patch  deb_no_google_analytics  deb_no_plot_gallery  deb_no_tinyclues_external_image  deb_nopaypal  deb_skip_some_tests_on_arm  deb_use_system_joblib  debhelper9-dsc-patch  disable-doctest.patch  fix_clean.patch  fix_scipy1.6_PR18711.patch  git-revision-cmd.patch  no-buttons-js.patch  no-download-intersphinx-mapping.patch  parallel-cythonize.patch  python-3.11.patch  relax_test_tolerance.patch  remove-google-analytics.patch  remove-paypal.patch  series  sphinx-doc-no-download.patch  up_workaround_buggy_pil
scikit_learn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sklearn/: _isotonic.c
source/: lintian-overrides
tests/: control  python3
upstream/: metadata
(+225 files in other folders)
