[options]
packages = find:

[options.packages.find]
include = sklearn*

[aliases]
test = pytest

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = sklearn
addopts = 
	--doctest-modules
	--disable-pytest-warnings
	--color=yes
	-p sklearn.tests.random_seed
	-rN
filterwarnings = 
	ignore:the matrix subclass:PendingDeprecationWarning

[flake8]
max-line-length = 88
target-version = ['py37']
ignore = 
	E24,
	E121,
	E123,
	E126,
	E203,
	E226,
	E704,
	E731,
	E741,
	W503,
	W504
exclude = 
	.git,
	__pycache__,
	dist,
	sklearn/externals,
	doc/_build,
	doc/auto_examples,
	doc/tutorial,
	build,
	asv_benchmarks/env,
	asv_benchmarks/html,
	asv_benchmarks/results,
	asv_benchmarks/benchmarks/cache
per-file-ignores = 
	examples/*: E402
	doc/conf.py: E402

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[check-manifest]
ignore = 
	sklearn/_loss/_loss.pyx
	sklearn/linear_model/_sag_fast.pyx
	sklearn/utils/_seq_dataset.pyx
	sklearn/utils/_seq_dataset.pxd
	sklearn/utils/_weight_vector.pyx
	sklearn/utils/_weight_vector.pxd
	sklearn/metrics/_dist_metrics.pyx
	sklearn/metrics/_dist_metrics.pxd
	sklearn/metrics/_pairwise_distances_reduction/_argkmin.pxd
	sklearn/metrics/_pairwise_distances_reduction/_argkmin.pyx
	sklearn/metrics/_pairwise_distances_reduction/_base.pxd
	sklearn/metrics/_pairwise_distances_reduction/_base.pyx
	sklearn/metrics/_pairwise_distances_reduction/_datasets_pair.pxd
	sklearn/metrics/_pairwise_distances_reduction/_datasets_pair.pyx
	sklearn/metrics/_pairwise_distances_reduction/_middle_term_computer.pxd
	sklearn/metrics/_pairwise_distances_reduction/_middle_term_computer.pyx
	sklearn/metrics/_pairwise_distances_reduction/_radius_neighbors.pxd
	sklearn/metrics/_pairwise_distances_reduction/_radius_neighbors.pyx

[codespell]
skip = ./.git,./.mypy_cache,./doc/themes/scikit-learn-modern/static/js,./sklearn/feature_extraction/_stop_words.py,./doc/_build,./doc/auto_examples,./doc/modules/generated
ignore-words = build_tools/codespell_ignore_words.txt

[egg_info]
tag_build = 
tag_date = 0

